--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "authors": [
         {
             "name": "eduardo pohren",
-            "email": "webdevsov@gmail.com"
+            "email": "duda.pohren@gmail.com"
         }
     ],
     "require": {
@@ -13,7 +13,7 @@
     },
     "autoload": {
         "psr-4": {
-            "": "vendor\\hcodebr\\php-classes\\src"
+            "Hcode\\": "vendor\\hcodebr\\php-classes\\src"
         }
     }
 }
